--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="Invitación">
   <meta property="og:description" content="¡Vamos a celebrar!">
-  <meta property="og:image" itemprop="image" content="https://invitacion-agustina-belen.netlify.app/files/miniatura.png">
+  <meta property="og:image" itemprop="image" content="https://invitacion-isabella-bluey.netlify.app/files/miniatura.png">
 
   <title>Invitación</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -86,7 +86,7 @@
       width: 200px;
       height: 35px;
       border-radius: 25px;
-      background-color: #FF82C9;
+      background-color: #F6ADCD;
       margin-bottom: 0px;
       font-size: 12px;
       color: #ffffff;
@@ -103,7 +103,7 @@
       width: 200px;
       height: 35px;
       border-radius: 25px;
-      background-color: #FF82C9;
+      background-color: #F6ADCD;
       margin-bottom: 0px;
       font-size: 12px;
       color: #ffffff;
@@ -129,11 +129,11 @@
 
   <div id="button-container">
    
-     <a id="boton-asistencia" href="https://api.whatsapp.com/send?phone=+56986749849&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3" class="button">
+     <a id="boton-asistencia" href="https://api.whatsapp.com/send?phone=+526673314671&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3" class="button">
       <i class="fab fa-whatsapp"></i> CONFIRMAR ASISTENCIA
     </a>
     
-    <a id="boton-direccion" href="https://maps.app.goo.gl/9mbwxqbkacwB6gZf6" class="button">
+    <a id="boton-direccion" href="https://maps.app.goo.gl/cFCfRTGbs5SSG8H19" class="button">
       <i class="fas fa-map-marker-alt"></i> VER UBICACIÓN
     </a>
 
@@ -162,7 +162,7 @@
       video.addEventListener('timeupdate', function () {
         var currentTime = video.currentTime;
 
-        if (currentTime >= 20 && currentTime <= 28) {
+        if (currentTime >= 26 && currentTime <= 33) {
           botonDireccion.style.opacity = '1';
           botonDireccion.style.pointerEvents = 'auto';
         } else {
@@ -170,7 +170,7 @@
           botonDireccion.style.pointerEvents = 'none';
         }
 
-        if (currentTime >= 30.5) {
+        if (currentTime >= 35) {
           botonAsistencia.style.opacity = '1';
           botonAsistencia.style.pointerEvents = 'auto';
         } else {
